Just Listen CFG done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Maliciousapp"
         tools:targetApi="31">
         <activity
+            android:name=".justlisten"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="victim.app.FLAG_ANNOUNCEMENT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="*/*" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".serialintent"
             android:exported="false" />
         <activity
