--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <queries>
+        <provider android:authorities="com.example.victimapp.MyProvider"/>
+    </queries>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,11 +15,16 @@
         android:theme="@style/Theme.Maliciousapp"
         tools:targetApi="31">
         <activity
+            android:name=".jokeprovider"
+            android:exported="false" />
+        <activity
             android:name=".justlisten"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="victim.app.FLAG_ANNOUNCEMENT" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="*/*" />
             </intent-filter>
         </activity>
